@@ -2244,7 +2244,6 @@ static void update_count_down (GtkRigCtrl *ctrl, gdouble t)
     gdouble  delta;
     gchar   *buff;
     guint    h,m,s;
-    gchar   *ch,*cm,*cs;
     gchar   *aoslos;
 
     
@@ -2267,42 +2266,21 @@ static void update_count_down (GtkRigCtrl *ctrl, gdouble t)
     h = (guint) floor (s/3600);
     s -= 3600*h;
 
-    /* leading zero */
-    if ((h > 0) && (h < 10))
-        ch = g_strdup ("0");
-    else
-        ch = g_strdup ("");
-
     /* extract minutes */
     m = (guint) floor (s/60);
     s -= 60*m;
 
-    /* leading zero */
-    if (m < 10)
-        cm = g_strdup ("0");
-    else
-        cm = g_strdup ("");
-
-    /* leading zero */
-    if (s < 10)
-        cs = g_strdup (":0");
-    else
-        cs = g_strdup (":");
-
     if (h > 0) 
-        buff = g_strdup_printf ("<span size='xx-large'><b>%s %s%d:%s%d%s%d</b></span>",
-                                aoslos, ch, h, cm, m, cs, s);
+        buff = g_strdup_printf ("<span size='xx-large'><b>%s %02d:%02d:%02d</b></span>",
+                                aoslos, h, m, s);
     else
-        buff = g_strdup_printf ("<span size='xx-large'><b>%s %s%d%s%d</b></span>",
-                                aoslos, cm, m, cs, s);
+        buff = g_strdup_printf ("<span size='xx-large'><b>%s %02d:%02d</b></span>",
+                                aoslos, m, s);
 
     gtk_label_set_markup (GTK_LABEL (ctrl->SatCnt), buff);
 
     g_free (buff);
     g_free (aoslos);
-    g_free (ch);
-    g_free (cm);
-    g_free (cs);
 
 }
 
