@@ -1,3 +1,15 @@
+2011-04-01 Alexandru Csete <oz9aec at gmail.com>
+
+    * src/pass-to-txt.c
+    * src/sat-pass-dialogs.c
+    * src/gtk-rig-ctrl.c
+    * src/gtk-event-list.c
+    * src/gtk-rot-ctrl.c
+    * src/gtk-polar-view.c
+    Appied patch 3261586: Remove leading zero code from time formatting
+    functions (thanks to Paul Schulz).
+
+
 2011-03-28 Charles Suprin <hamaa1vs at gmail.com>
 
     * src/gtk-rig-ctrl.c
